--- a/src/dm.css
+++ b/src/dm.css
@@ -31,7 +31,7 @@
   position: absolute;
   height: 100%;
   width: auto;
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.7);
   min-width: 100px;
   left: 50%;
   border-radius: 3px;
